Fixed text align on the background image

--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@
     background-size: cover;
     width: 100%;
     height: 100vh;
+    justify-content: center;
+    display: flex;
 }
 
 #content{
@@ -36,11 +38,14 @@
     padding: center;
     padding-top: 250px;
     padding-bottom: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .content{
-    text-align: center;
-    padding-top: 50px;
+    justify-content: center;
+    display: flex;
 }
 .content a{
     color: tomato;
